Tue Aug  4 13:09:25 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Log_Msg.cpp: Added support for the %.1M format.  Thanks to
          Alon Diamant <diamant at alon at gmail dot com> for contributing
          this.  This fixes bugid 3716.
  
        * tests/Log_Msg.cpp: Added a test for the %.1M format.  Thanks to
          Alon Diamant <diamant at alon at gmail dot com> for contributing
          this.

Tue Aug  4 12:07:09 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * bin/mpc.pl:
        * bin/mwc.pl:

          Use the new MPC Driver constant to determine which type of input
          will be dealt with (workspaces or projects).

Tue Aug  4 12:06:28 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Modified the prebuild and postbuild rules to obey the 'requires'
          and 'avoids' MPC settings since the gnuace projects have the
          additional requirement of gnu make macros that match the
          requirements and avoids settings.

Mon Aug  3 20:08:22 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Compiler_Features_06_Test.cpp:
          I think I have fixed the compilation problem on OpenVMS, using
          some classes and functors in the STL requires including
          "functional", but most compilers do not enforce this
          requirement.  Apparently OpenVMS does, I think this is a good
          feature of said compiler.

Tue Aug  4 10:30:40 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_unicode.mpb:
          Changed this to a feature, when uses_wchar is set we then
          just set unicode to 1

        * bin/MakeProjectCreator/config/acedefaults.mpb:
          Derive from ace_unicode. That way when we generate with uses_wchar=1
          the define ACE_USES_WCHAR is generated into the project and also the
          CharacterSet is correctly set in the msvc project file.